# mtuci-rs

./: Cargo.toml  todostekkz.rs  tt
homework (tasks)/: task1.rs
homework1/: fizzbuzz.rs
homework4/: hashmap.rs  myvector.rs
rustlings complete 2/enums/: enums3.rs
rustlings complete 2/move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs  move_semantics4.rs  move_semantics5.rs  move_semantics6.rs
rustlings complete 2/structs/: structs1.rs  structs2.rs  structs3.rs
rustlings complete 2/vecs/: vecs1.rs  vecs2.rs
rustlings complete 3/hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings complete 3/modules/: modules2.rs  modules3.rs
rustlings complete 3/strings/: strings2.rs  strings3.rs  strings4.rs
rustlings complete 4/error_handling/: errors1.rs  errors3.rs  errors4.rs  errors6.rs
rustlings complete 4/traits/: traits1.rs  traits2.rs  traits3.rs  traits4.rs  traits5.rs
rustlings complete 5/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings complete 5/iterators/: iterators1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings complete 5/lifetimes/: lifetimes1.rs  lifetimes2.rs
rustlings complete 5/tests/: tests1.rs  tests2.rs  tests4.rs
rustlings complete 6/clippy/: clippy1.rs  clippy3.rs
rustlings complete 6/smart_pointers/: arc1.rs  box1.rs  cow1.rs  rc1.rs
rustlings complete 6/threads/: threads1.rs  threads2.rs  threads3.rs
rustlings complete/functions/: functions1.rs  functions2.rs  (+1 more)
src/: main.rs
tasks home /: task1.rs
taskshome/: task2.rs
(+14 files in other folders)
