[package]
name = "mtuci-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[[bin]]
name = "my_binary"
path = "src/main.rs"

[[bin]]
name = "fizzbuzz"
path = "homework1/fizzbuzz.rs"


[[bin]]
name = "task1"
path = "taskshome/task1.rs"

[[bin]]
name = "task2"
path = "taskshome/task2.rs"

